# Pinakes

./: .gitignore  CMakeLists.txt  Makefile  README.md  _build.sh  _run.sh  main.c  main.cpp  main.h  main.r
libs/LFiles/include/: LFiles.h  LFiles.r
src/: PIcons.r  PIntro.cpp  PIntro.h  PIntro.r  PMenu.cpp  PMenu.h
